#10: images are no longer distorted, however item pods are not of a fixed height.

--- a/css/style.scss
+++ b/css/style.scss
@@ -964,7 +964,7 @@ pre {
 
 .general-cover {
   margin-top: -60px;
-  height: 80vh;
+  height: 75vh;
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
